Fixed Navbar and Improved Readability by reducing font weight

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,10 @@ body {
   color: var(--color-foreground);
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 500;
+}
+
 .wrap {
   max-width: 600px;
   margin: 0 auto;
@@ -46,7 +50,7 @@ img {
   max-width: 100%;
   height: auto;
   border: 5px solid var(--color-primary);
-  border-radius: 12%;
+  border-radius: 3rem;
 }
 
 .searchTerm {
@@ -351,9 +355,9 @@ img {
 
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 0 2rem;
   background-color: var(--color-primary);
   position: relative;
   --color-background: white;
@@ -364,9 +368,8 @@ nav .logo {
 }
 
 nav .logo-text {
-  margin-left: 10px;
   color: var(--color-background);
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -393,36 +396,49 @@ nav ul {
   list-style: none;
   display: flex;
   gap: 1rem;
-  padding-bottom: 10px;
-}
-
-nav ul li {
-  display: inline;
+  transition: all 0.3s ease;
 }
 
 nav ul li a {
   color: var(--color-background);
   text-decoration: none;
   font-size: 1.2rem;
+  opacity: 0.75;
+  transition: all 0.3s ease;
 }
 
 nav ul li a:hover {
   text-decoration: underline;
+  opacity: 1;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   nav ul {
-    display: none;
+    display: flex;
+    overflow: hidden;
     flex-direction: column;
     width: 100%;
+    height: 0;
+    max-height: fit-content;
     position: absolute;
-    top: 60px;
+    justify-content: space-evenly;
+    box-sizing: border-box;
+    top: 78px;
+    margin: 0;
     left: 0;
     background-color: var(--color-primary);
   }
 
+  nav ul li:nth-of-type(1) {
+    margin-top: 0.5rem;
+  }
+  
+  nav ul li:nth-last-of-type(1) {
+    margin-bottom: 1rem;
+  }
+
   nav ul.show {
-    display: flex;
+    height: 210px;
   }
 
   nav .hamburger {
